tests/failing/only_transient_column_struct.rs
#[entity]
struct TransientAnnotationStruct {
    #[pk]
    id: ParentPK,
    #[column(transient)]
    name: String
}
